[gd_scene load_steps=12 format=2]

[ext_resource path="res://External Assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/HUD2.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Dialogue.gd" type="Script" id=3]
[ext_resource path="res://Custom Assets/MouseAnimations/mouseGray.png" type="Texture" id=4]
[ext_resource path="res://fonts/FSAlbert_25.tres" type="DynamicFont" id=5]
[ext_resource path="res://fonts/FSAlbert_40.tres" type="DynamicFont" id=6]
[ext_resource path="res://fonts/FSAlbertPro-ExtraBold.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://fonts/FSAlbert_35.tres" type="DynamicFont" id=8]

[sub_resource type="DynamicFont" id=1]
size = 55
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 45
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[node name="HUD2" type="Node2D"]
script = ExtResource( 2 )

[node name="PlayerTurn" type="Label" parent="."]
margin_left = 723.112
margin_top = 39.4678
margin_right = 1105.11
margin_bottom = 95.4678
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0.67451, 0.92549, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
text = "Player 1's Turn!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="."]
margin_left = 773.47
margin_top = 882.0
margin_right = 1092.47
margin_bottom = 991.0
custom_fonts/font = ExtResource( 6 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RollDice" type="Button" parent="."]
margin_left = 1551.63
margin_top = 104.648
margin_right = 1814.63
margin_bottom = 165.648
custom_fonts/font = ExtResource( 8 )
text = "Roll the Dice"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndTurn" type="Button" parent="."]
margin_left = 787.475
margin_top = 107.0
margin_right = 1050.47
margin_bottom = 168.0
custom_fonts/font = ExtResource( 8 )
text = "End Turn"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToggleDialogue" type="Button" parent="."]
margin_left = 94.5236
margin_top = 469.861
margin_right = 365.524
margin_bottom = 511.861
custom_fonts/font = ExtResource( 8 )
text = "Toggle Dialogue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 47.0
margin_top = 194.0
margin_right = 511.0
margin_bottom = 442.0
custom_constants/separation = 21
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerInfo" type="Label" parent="VBoxContainer"]
margin_right = 464.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0.67451, 0.92549, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
text = "Player Info"
align = 1

[node name="Money" type="Label" parent="VBoxContainer"]
margin_top = 67.0
margin_right = 464.0
margin_bottom = 108.0
custom_fonts/font = ExtResource( 6 )
text = "Money: $0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Years" type="Label" parent="VBoxContainer"]
margin_top = 129.0
margin_right = 464.0
margin_bottom = 170.0
custom_fonts/font = ExtResource( 6 )
text = "Years: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackupFormulations" type="Label" parent="VBoxContainer"]
margin_top = 191.0
margin_right = 464.0
margin_bottom = 232.0
custom_fonts/font = ExtResource( 6 )
text = "Backup Formulations: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelText" type="Label" parent="."]
margin_left = 1610.81
margin_top = 188.708
margin_right = 1746.81
margin_bottom = 273.708
custom_fonts/font = ExtResource( 6 )
text = "Level: 1
Roll: 1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Warning" type="Label" parent="."]
margin_left = 1641.18
margin_top = 24.8454
margin_right = 1892.18
margin_bottom = 44.8454
custom_fonts/font = SubResource( 3 )
text = "Warning! Put text here."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogueBox" type="Polygon2D" parent="."]
position = Vector2( -335, 455 )
color = Color( 0.156863, 0.156863, 0.156863, 1 )
polygon = PoolVector2Array( 371.443, 77.8848, 777.731, 79.4481, 778.031, 338.101, 373.565, 338.808 )

[node name="Dialogue" type="RichTextLabel" parent="DialogueBox"]
margin_left = 387.0
margin_top = 94.0
margin_right = 758.0
margin_bottom = 323.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="DialogueBox"]
wait_time = 0.01
autostart = true

[node name="OptionButton" type="OptionButton" parent="."]
margin_left = 75.017
margin_top = 108.411
margin_right = 438.017
margin_bottom = 150.411
custom_fonts/font = ExtResource( 5 )
text = "Current Player Position"
icon = ExtResource( 4 )
items = [ "Current Player Position", ExtResource( 4 ), false, 0, null, "Level 1", null, false, 1, null, "Level 2", null, false, 2, null, "Level 3", null, false, 3, null, "Level 4", null, false, 4, null, "Level 5", null, false, 5, null, "Level 6", null, false, 6, null, "Level 7", null, false, 7, null, "Level 8", null, false, 8, null, "Level 9", null, false, 9, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoreInfo" type="Button" parent="."]
margin_left = 159.925
margin_top = 818.647
margin_right = 331.926
margin_bottom = 850.647
custom_fonts/font = ExtResource( 5 )
text = "Get more info!"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="RollDice" to="." method="_on_RollDice_pressed"]
[connection signal="pressed" from="EndTurn" to="." method="_on_EndTurn_pressed"]
[connection signal="pressed" from="ToggleDialogue" to="." method="toggleDialogueBox"]
[connection signal="timeout" from="DialogueBox/Timer" to="DialogueBox/Dialogue" method="_on_Timer_timeout"]
[connection signal="item_selected" from="OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="pressed" from="MoreInfo" to="." method="_on_MoreInfo_pressed"]
